name:                units
version:             0.1.0
synopsis:            Calculations with type-safe physical units

homepage:            http://hub.darcs.net/nand/units
license:             BSD3
license-file:        LICENSE
author:              nand@lavabit.com
maintainer:          nand@lavabit.com
stability:           Experimental
category:            Units
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.7.20121228

source-repository head
  type:                darcs
  location:            http://hub.darcs.net/nand/units

library
  exposed-modules:     Units
                       Units.TH
                       Units.Prelude
                       Units.SI
                       Units.Metric
                       Units.Convert
                       Units.Currency

  other-modules:       Units.Internal.Types
                       Units.Internal.TypeOrd

  hs-source-dirs:      src

  build-depends:       base == 4.7.*,
                       containers == 0.5.*,
                       template-haskell == 2.9.*,
                       singletons >= 0.10

  ghc-options:
                       -Wall
                       -fno-warn-unused-matches
                       -fno-warn-name-shadowing
                       -fno-warn-type-defaults
                       -fno-warn-orphans
                       -fno-warn-unused-binds

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs

  build-depends:       base == 4.7.*,
                       units
